# nbs_experiments

./: .gitmodules  CMakeLists.txt  README.md  ncnr.rosinstall  package.xml  rasberry.rosinstall  scitos.rosinstall  tiago_lcas.rosinstall
config/: amcl_scitos_real.yaml  custom_rosconsole.conf  inb.rviz  inb3123_sim.rviz  inb3eng_sim.rviz  inb_scitos.rviz  inb_sim.rviz  laser_filter.yaml  move_base.yaml  move_base_scitos_real.yaml  move_base_scitos_real_orig.yaml  move_base_teb.yaml  ori_sim.rviz  riseholme_sim.rviz
config/nav/: move_base.yaml  move_base_default.yaml  move_base_scitos.yaml  move_base_scitos_real.yaml  move_base_scitos_real_orig.yaml  move_base_scitos_sim.yaml
env-hooks/: 90.gazebo_models_mcdm.sh.em
launch/: INB3123_Tiago_rfid_grid_setup.launch  INB3123_experiment.launch  INB3123_experiment_realTiago.launch  INB3123_goto_initial_pose.launch  INB3123_rfid_grid_gazebo.launch  INB3123_rfid_grid_real.launch  INB3123_world.launch  INB3ENG_experiment.launch  INB3ENG_rfid_grid_gazebo.launch  INB3ENG_rfid_grid_gazebo_2.launch  INB3ENG_rfid_grid_real.launch  INB3ENG_rfid_grid_real_2.launch  ORI_experiment.launch  ORI_rfid_grid_gazebo.launch  RASBERRY_rfid_grid_gazebo.launch  RASBERRY_rfid_grid_gazebo_two_readers.launch  RASBERRY_rfid_grid_real.launch  RASBERRY_rfid_grid_real_two_readers.launch  radiation_demonstrator_ncnr.launch  robot_gazebo_INB3123.launch  scitos_gazebo.launch  start_robot_gazebo.launch  start_world.launch  strands_navigation.launch  tiago_gazebo.launch  tiago_gazebo_INB3123.launch  tiago_mapping_INB3123.launch  tiago_navigation_INB3123.launch
launch/scitos/: amcl.launch  loc_map_server.launch  move_base.launch  nav_map_server.launch  remove_edges_laser.launch  strands_navigation.launch
maps/inb_atrium/: INB_atrium.pgm  INB_atrium.yaml
maps/map_real/: map.yaml
maps/map_real_mcdm/: map.pgm
models/: INB3ENG.dae  missing_materials.txt
scripts/: compare_methods.py  compare_nicola.py  create_fake_results.py  parseRosbagsNoPlay.py  plot_bayes.py  plot_both_distances.py  plot_confusion_matrix.py  plot_predictions.py  plot_topologicaldistance.py  setTiago.sh  setup.sh  start.yaml
tmule/: mcdm_linda.yaml  mcdm_multi_thorvald.yaml  ncnr-robot.yaml  ncnr_demo_sim.yaml  rasberry-robot-rfid.yaml  rasberry-robot-two-rfid.yaml
worlds/: empty.world
(+31 files in other folders)
