<?xml version="1.0"?>
<package>
  <name>mcdm_experiments</name>
  <version>0.0.0</version>
  <description>MCDM experiments (real/simulated)</description>


  <maintainer email="manolofc@gmail.com">Manuel Fernandez</maintainer>

  <license>APACHE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>teb_local_planner</run_depend>
  <run_depend>gazebo_worlds_oru</run_depend>
  <run_depend>gazebo_models_oru</run_depend>
  <export>
  </export>
</package>
