<?xml version="1.0"?>
<package>
  <name>nbs_experiments</name>
  <version>0.0.0</version>
  <description>MCDM experiments (real/simulated)</description>


  <maintainer email="manolofc@gmail.com">Manuel Fernandez</maintainer>

  <license>APACHE</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>move_base</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>teb_local_planner</run_depend>
  <!-- <run_depend>gazebo_worlds_oru</run_depend>
  <run_depend>gazebo_models_oru</run_depend> -->
  <run_depend>strands_movebase</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <export>
  </export>
</package>
