<?xml version="1.0"?>
<package>
  <name>nbs_experiments</name>
  <version>0.0.0</version>
  <description>MCDM experiments (real/simulated)</description>


  <maintainer email="manolofc@gmail.com">Manuel Fernandez</maintainer>
  <maintainer email="pulver22@gmail.com">Riccardo Polvara</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>move_base</depend>
  <depend>fake_localization</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>gazebo_ros_control</depend>
  <depend>teb_local_planner</depend>
  <!-- <depend>gazebo_worlds_oru</depend>
  <depend>gazebo_models_oru</depend> -->
  <depend>strands_movebase</depend>
  <depend>global_planner</depend>
  <depend>eband_local_planner</depend>
  <export>
  </export>
</package>
